Refactor for unique IDs not naming only icons
Foolin' around with git, this is a huge patch which I'm trying to break
up in pieces of discreet functionality (useful for merging single
changes!)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,8 @@
 <resources>
     <string name="hello">Hello World, MainActivity!</string>
     <string name="app_name">Dude, where\'s my car?</string>
+<string name="car">Show the car</string>
+<string name="arrow">Take me to my car</string>
+<string name="remove">Delete this car</string>
+<string name="park">Park my car here</string>
 </resources>
