--- a/WheresMyCar/res/values/strings.xml
+++ b/WheresMyCar/res/values/strings.xml
@@ -16,7 +16,7 @@
 	<string name="show_car">Show in map</string>
 	<string name="directions">Take me to my car</string>
 	<string name="park">Park my car here</string>
-	<string name="edit_profile">Edit info</string>
+	<string name="edit_profile">Edit profile</string>
 	<string name="share_location">Share location</string>
 	<string name="remove">Delete profile</string>
 	
@@ -26,6 +26,8 @@
 	<string name="profile_icon">Car profile icon</string>
 	
     <!--  Edit car options menu strings -->
-	<string name="save_profile">Save</string>
+	<string name="save_profile">Save profile</string>
+	<string name="saved_profile">Profile saved</string>
+	<string name="save_error">Error saving profile</string>
 	
 </resources>
